Move more things to header files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,9 @@
 # library is used only in function bodies (PRIVATE), only in function
 # signatures/types (INTERFACE), or both (PUBLIC).
 
-add_executable(contained contained.c)
-target_link_libraries(contained PRIVATE seccomp)
-target_link_libraries(contained PRIVATE cap)
+add_library(contained contained.c contained.h)
+
+add_library(syscalls syscalls.c syscalls.h)
+
+target_link_libraries(syscalls PRIVATE seccomp)
+target_link_libraries(syscalls PRIVATE cap)
