[20250421] First draft for tests and cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,21 @@ find_library(CRITERION criterion REQUIRED)
 set(CRITERION_FLAGS --verbose -j1)
 
 add_subdirectory(test)
+
+
+# Add the test_utils executable
+add_executable(test_utils ${CMAKE_SOURCE_DIR}/test/test_utils.c) 
+
+target_link_libraries(test_utils
+    PRIVATE
+        src           
+        ${CRITERION}
+)
+
+# Link flags for mocking read/write (used by --wrap)
+set_target_properties(test_utils PROPERTIES
+    LINK_FLAGS "-Wl,--wrap=write --wrap=read"
+)
+
+# Register this test with CTest
+add_test(NAME test_utils COMMAND test_utils ${CRITERION_FLAGS})
