Moving around CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,11 +14,11 @@ add_library(error_handling error_handling.c error_handling.h)
 add_library(cgroups cgroups.c cgroups.h)
 target_link_libraries(cgroups PRIVATE error_handling)
 
-add_library(utils utils.c utils.h)
-target_link_libraries(utils PRIVATE cgroups)
-
 add_library(syscalls syscalls.c syscalls.h)
 target_link_libraries(syscalls PRIVATE seccomp cap)
+
+add_library(utils utils.c utils.h)
+target_link_libraries(utils PRIVATE cgroups syscalls)
 
 add_executable(contained contained.c)
 target_link_libraries(contained PRIVATE utils cgroups syscalls)
