Rename files and sort includes, update README to reflect new names

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,19 +9,19 @@
 # library is used only in function bodies (PRIVATE), only in function
 # signatures/types (INTERFACE), or both (PUBLIC).
 
-add_library(error_handling error_handling.c error_handling.h)
+add_library(utils utils.c utils.h)
 
 add_library(cgroups cgroups.c cgroups.h)
-target_link_libraries(cgroups PRIVATE error_handling)
+target_link_libraries(cgroups PRIVATE utils)
 
 add_library(syscalls syscalls.c syscalls.h)
 target_link_libraries(syscalls PRIVATE seccomp cap)
 
-add_library(utils utils.c utils.h)
-target_link_libraries(utils PRIVATE cgroups syscalls)
+add_library(namespaces namespaces.c namespaces.h)
+target_link_libraries(namespaces PRIVATE cgroups syscalls)
 
 add_executable(contained contained.c)
-target_link_libraries(contained PRIVATE utils cgroups syscalls)
+target_link_libraries(contained PRIVATE namespaces cgroups syscalls)
 
 # target_link
 # target_link_libraries(contained PRIVATE cap)
